syntax = "proto3";

option csharp_namespace = "AppDocumentManagement.ExternalDocumentService";

package externalDocumentService;

service externalDocumentAPI {
}

